trying to add functioning filing type selector

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="popup.css" rel="stylesheet" type="text/css">
+        <link href="popup.css" rel="stylesheet" type="text/css">
 
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -21,6 +21,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <!-- Moment -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+   
 </head>
 
 <body>
@@ -31,9 +34,12 @@
             <img id="legal-aid" src="https://www.vtlegalaid.org/sites/default/files/VLA_logo-200-97px.png" alt="Home"
                 class="logos">
         </div>
-        <p id="introText">To begin, navigate to a court docket page relating to your client, and click the "Add Counts" button
+        <p id="introText">To begin, navigate to a court docket page relating to your client, and click the "Add Counts"
+            button
             below.</p>
-            <a target="_blank" href="https://secure.vermont.gov/vtcdas/user"><p id="vtCourtsOnline"><b>VT Courts Online  <i class="fas fa-external-link-alt"></i></b></p></a>
+        <a target="_blank" href="https://secure.vermont.gov/vtcdas/user">
+            <p id="vtCourtsOnline"><b>VT Courts Online <i class="fas fa-external-link-alt"></i></b></p>
+        </a>
     </div>
     <div class="popTop">
         <div id="defendantInfo">
