Styling table of convictions, starting to generate the stats for the checkout sheet.

--- a/extensionDirectory/forms/petitionExpunge.html
+++ b/extensionDirectory/forms/petitionExpunge.html
@@ -175,8 +175,11 @@
     <div class="container form__container">
         <div class="header">
             <div class="header__title">Clinic Checkout Sheet</div>
-            <div class="petition-body">
+            <div class="filing-body">
                 <div class="title petition__title">Summary of Charges</div>
+                <dl>
+                    <dt>Number Of Ineligible Counts<dt><dd>{{numCountsIneligible}}</dd>
+                </dl>
             </div>
         </div>
     </div>
