move buttons to top

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -63,16 +63,18 @@
             <img src="https://www.vtlegalaid.org/sites/default/files/VLA_logo-200-97px.png" alt="Home" class="logos">
         </div>
     </div>
-    <p id="countsLabel"><b>Counts</b></p>
-    <hr>
-    <div id="countCards" class="accordion col-md-4 text-center"></div>
-    <hr>
-    <div class="col-md-4 text-center bottom-div">
+    <div id="mainButtonDiv" class="col-md-4 text-center bottom-div">
         <div class="col-md-4 text-center button-div">
             <button id="add-docket-info" class="btn btn-primary">Add Counts <i class="fas fa-plus-circle"></i></button>
             <button id="create-petition" class="btn btn-success">Generate Documents <i
                     class="fas fa-external-link-alt"></i></button>
         </div>
+    </div>
+    <p id="countsLabel"><b>Counts</b></p>
+    <hr>
+    <div id="countCards" class="accordion col-md-4 text-center"></div>
+    <hr>
+    <div class="col-md-4 text-center bottom-div">
         <p>ExpungeVT is a Code for BTV product developed in coordination with Vermont Legal Aid</p>
     </div>
     <script id='script' src="popup.js"></script>
