--- a/extensionDirectory/forms/petitionExpunge.html
+++ b/extensionDirectory/forms/petitionExpunge.html
@@ -28,6 +28,10 @@
 
     <!-- vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/gumshoe@4/dist/gumshoe.polyfills.min.js"></script>
+
+
 </head>
 
 <body>
@@ -41,6 +45,10 @@
             </div>
         </div>
     </div>
+
+
+        <filing-nav v-bind:filings="filings"></filing-nav>
+
         <table class="all-filings">
          <tbody>
            <tr><td>
@@ -192,10 +200,10 @@
          <tbody>
            <tr><td>
 
-
+        <section id="extra-documents">
         <!-- Clinic Checkout Sheet -->
 
-<article class="page">
+<article class="page" id="clinic-checkout">
     <div class="filing-document">
             <div class="filing__title">Clinic Checkout Sheet</div>
             <div class="filing-body">
@@ -207,6 +215,7 @@
         </div>
 </article>
 
+</section>
 
 
 </td></tr>
