--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -35,8 +35,8 @@
                 class="logos">
         </div>
         <div class="col-md-4 text-center button-div">
-            <button id="add-docket-info" class="btn btn-primary">Add Counts <i class="fas fa-plus-circle"></i></button>
-            <button id="create-petition" class="btn btn-success">Generate Documents <i
+            <button id="add-docket-info" class="js-add-count btn btn-primary">Add Counts <i class="fas fa-plus-circle"></i></button>
+            <button id="" class="btn btn-success" disabled>Generate Documents <i
                     class="fas fa-external-link-alt"></i></button>
         </div>
         <p id="introText">To begin, navigate to a court docket page relating to your client, and click the "Add Counts"
@@ -70,7 +70,7 @@
     </div>
     <div id="mainButtonDiv" class="col-md-4 text-center bottom-div">
         <div class="col-md-4 text-center button-div">
-            <button id="add-docket-info" class="btn btn-primary">Add Counts <i class="fas fa-plus-circle"></i></button>
+            <button id="add-docket-info" class="js-add-count btn btn-primary">Add Counts <i class="fas fa-plus-circle"></i></button>
             <button id="create-petition" class="btn btn-success">Generate Documents <i
                     class="fas fa-external-link-alt"></i></button>
         </div>
