--- a/extensionDirectory/forms/petitionExpunge.html
+++ b/extensionDirectory/forms/petitionExpunge.html
@@ -249,6 +249,7 @@
             <p>There are no filings to prepare. Please navigate to <a href="https://secure.vermont.gov/vtcdas/user">VT Courts Online</a> and open the Expunge VT extension to begin a new session.</p>
         </div>
     </template>
+</div>
     <script id='script' src="filing-app.js"></script>
 
 </body>
