Makes table of charges expand to multi line in the UI. Adds initial implementation of making vue update automatically based on state of extension data.

--- a/extensionDirectory/forms/petitionExpunge.html
+++ b/extensionDirectory/forms/petitionExpunge.html
@@ -94,7 +94,7 @@
                                                         <input class="no-print" v-model="count.dispositionDate">
                                                     </td>
                                                     <td class="count-item__description"><span class="no-visible">{{count.description}}</span>
-                                                        <input class="no-print" v-model="count.description">
+                                                        <textarea rows="1" class="no-print count-item__textarea" v-model="count.description"></textarea>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -125,7 +125,7 @@
                                                         <input class="no-print" v-model="count.dispositionDate">
                                                     </td>
                                                     <td class="count-item__description"><span class="no-visible">{{count.description}}</span>
-                                                        <input class="no-print" v-model="count.description">
+                                                        <textarea rows="1" class="no-print count-item__textarea" v-model="count.description"></textarea>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -156,7 +156,7 @@
                                                         <input class="no-print" v-model="count.dispositionDate">
                                                     </td>
                                                     <td class="count-item__description"><span class="no-visible">{{count.description}}</span>
-                                                        <input class="no-print" v-model="count.description">
+                                                        <textarea rows="1" class="no-print count-item__textarea" v-model="count.description"></textarea>
                                                     </td>
                                                 </tr>
                                             </tbody>
