Saves responses in local storage to persist between page reloads and data changes. Implements full data clearing when "Clear All" is selected from popup, which resets page and clears all response data too.

--- a/extensionDirectory/forms/petitionExpunge.html
+++ b/extensionDirectory/forms/petitionExpunge.html
@@ -172,8 +172,8 @@
                                     <!-- End Unique Portion of Filings -->
 
                                     <div class="filing-body__response">
-                                        <p class="no-visible" v-html="nl2br(filing.response)"></p>
-                                        <textarea class="no-print" v-model="filing.response" placeholder="Type here..."></textarea>
+                                        <p class="no-visible" v-html="nl2br(responses[filing.id])"></p>
+                                        <textarea class="no-print" v-model="responses[filing.id]" placeholder="Type here..."></textarea>
                                     </div>
 
                                     <filing-footer v-bind:signature="petitoner" v-bind:stipulated="filing.isStipulated"></filing-footer>
