petitioner info save working, but with <br> issue

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -48,18 +48,21 @@
     </div>
     <div class="popTop">
         <div id="defendantInfo">
-            <p><b>Petitioner Information</b></p>
+            <div class="petitioner-details">
+                <p><b>Petitioner Information</b></p>
+                <button id="edit-petitioner" class="btn btn-outline-secondary">Edit</button>
+            </div>
             <div class="petitioner-details">
                 <p class="petitioner-label">Name:</p>
-                <p id='defendantName'></p>
+                <p class="pet-detail" id='defendantName' contenteditable="false"></p>
             </div>
             <div class="petitioner-details">
                 <p class="petitioner-label">DOB:</p>
-                <p id='defendantDOB'></p>
+                <p class="pet-detail" id='defendantDOB' contenteditable="false"></p>
             </div>
             <div class="petitioner-details">
                 <p class="petitioner-label">Address:</p>
-                <p id='defendantAddress'></p>
+                <p class="pet-detail" id='defendantAddress' contenteditable="false"></p>
             </div>
         </div>
         <div id="logoDiv">
