bugfix: Hides phone number input in print

--- a/extensionDirectory/forms/petitionExpunge.html
+++ b/extensionDirectory/forms/petitionExpunge.html
@@ -199,7 +199,7 @@
                     <div class="filing-closing__contact-box">
                         <p class="filing-closing__contact-box-title bold">Petitioner's Address &amp; Phone Number:</p>
                         <p class="filing-closing__petitioner-address" v-html="petitioner.address"></p>
-                        <p class="filing-closing__phone">Phone: <span class="no-visible">{{responses['phone']}}</span><input v-model="responses['phone']" placeholder="Phone Number"></p>
+                        <p class="filing-closing__phone">Phone: <span class="no-visible">{{responses['phone']}}</span><input class="no-print" v-model="responses['phone']" placeholder="Phone Number"></p>
                     </div>
                     
                 </div>
